force-app/main/default/objects/SharePoint_connector_settings__mdt/SharePoint_connector_settings__mdt.object-meta.xml
<CustomObject>
    <label>SharePoint connector settings</label>
    <pluralLabel>SharePoint connector settings</pluralLabel>
</CustomObject>