force-app/main/default/objects/SharePoint_connector_settings__mdt/fields/List__c.field-meta.xml
<CustomField>
    <fullName>List__c</fullName>
    <label>List</label>
    <length>80</length>
    <type>Text</type>
</CustomField>