force-app/main/default/objects/SharePoint_connector_settings__mdt/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <label>Site</label>
    <length>80</length>
    <type>Text</type>
</CustomField>