force-app/main/default/objects/SharePoint_connector_settings__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Describes the type of settings contained, so we can format URL&apos;s accordingly in Apex</description>
    <inlineHelpText>Describes the type of settings contained, so we can format URL&apos;s accordingly in Apex</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Site/list url</fullName>
                <default>true</default>
                <label>Site/list url</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>